Create files when loading first time